tests/NormalTests/paczka1/small_fuzzy/89274600.err
Error in line 1: CiND A144 51,4
Error in line 5: CiND S467 7,7
Error in line 2: 2bvv5DJBIC A199 0,2
Error in line 6: GWkhiGgOr S467 71,7
Error in line 10: pRE0niy4 A300 44,7
